--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 /* Feel free to change me and make me your own! */
 
 body {
-  background-color: #edd8c3; 
-  font-family: Georgia, serif; 
+  background-color: black; 
+  font-family: Georgia, serif;
+  color: white;
 }
 
 article {
